--- a/css/reset.css
+++ b/css/reset.css
@@ -6,9 +6,10 @@ html, body {
      font-size: 62.5%;
      line-height: 1;
      font-family: 'Noto Sans KR', sans-serif;
-     -webkit-tap-highlight-color: none;
 }
-
+button{
+     -webkit-tap-highlight-color: transparent;
+}
 /* 이러면 1.6rem이라했을때 16px으로 편히 볼수있음*/
 li{list-style: none;}
 a{
