--- a/css/reset.css
+++ b/css/reset.css
@@ -1,42 +1,59 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 
-*{margin:0; padding:0;}
-html, body {
+* {
+     margin: 0;
+     padding: 0;
+}
+
+html,
+body {
      font-size: 62.5%;
      line-height: 1;
      font-family: 'Noto Sans KR', sans-serif;
 }
-button{
+
+button {
      -webkit-tap-highlight-color: transparent;
+     font-family: 'Noto Sans KR', sans-serif;
 }
+
 /* 이러면 1.6rem이라했을때 16px으로 편히 볼수있음*/
-li{list-style: none;}
-a{
+li {
+     list-style: none;
+}
+
+a {
      display: block;
-     color:#333;
+     color: #333;
      letter-spacing: -0.025rem;
      text-decoration: none;
      color: inherit;
 }
-p{
+
+p {
      letter-spacing: -0.06rem;
 }
-.clearfix::after{
-     content:'';
+
+.clearfix::after {
+     content: '';
      display: block;
      clear: both;
 }
-img{
-    vertical-align: middle;
-    max-width: 100%;
+
+img {
+     vertical-align: middle;
+     max-width: 100%;
      border: 0;
 }
 
 button:focus {
      outline: none;
- }
- 
- 
+}
 
-ul,ol {list-style: none;}
+
+
+ul,
+ol {
+     list-style: none;
+}
