--- a/css/index.css
+++ b/css/index.css
@@ -228,7 +228,8 @@ body {
 
 .regenerate-all:active {
     /* background-color: #6AAB9A; */
-    background-color: #3d7062;
+    /* background-color: #3d7062; */
+    background-color: red;
 }
 
 
