--- a/css/index.css
+++ b/css/index.css
@@ -217,19 +217,19 @@ body {
     color: #fff;
     margin-right: 10px;
     box-shadow: 0px 0px 3px #02010a6b;
-    transition: background-color 0.3s ease-in-out;
+    transition: 0.1s ease-in-out;
 }
 
 /* TEST */
 .regenerate-all:hover {
-    background-color: #3d7062;
+    /* background-color: #3d7062; */
 
 }
 
 .regenerate-all:active {
     /* background-color: #6AAB9A; */
     /* background-color: #3d7062; */
-    background-color: red;
+    background-color: #3d7062;
 }
 
 
