--- a/css/index.css
+++ b/css/index.css
@@ -88,6 +88,7 @@ body {
     font-size: 1.1rem;
     transition: 0.1s linear;
 }
+
 .regenerate:active {
     background-color: rgb(61, 112, 98);
 }
@@ -232,7 +233,7 @@ body {
 
 .copy-all:active {
     background-color: #000;
-    
+
 }
 
 
@@ -243,6 +244,7 @@ footer {
     width: calc(100% - 20px);
     margin-top: 20px;
     padding-bottom: 50px;
+    text-align: center;
 }
 
 .footer_text {
@@ -254,24 +256,18 @@ footer {
 
 .footer_link {
     font-size: 1.1rem;
-    color: #333;
+    font-weight: bolder;
+    color: #fff;
     font-weight: 600;
     text-align: center;
-    color: #333;
-    width: 166px;
-    height: 30px;
-    line-height: 30px;
-    margin: 0 auto;
+    padding: 10px;
     border-radius: 10px;
-    border: none;
     cursor: pointer;
-    font-weight: bolder;
-    text-transform: uppercase;
     background-color: #666;
-    color: #fff;
     box-shadow: 0px 0px 3px #02010a6b;
-    transition: 0.1s linear;
+    margin: 0 auto;
     margin-bottom: 10px;
+    display: inline-block;
 }
 
 .footer_link:hover {
