--- a/css/index.css
+++ b/css/index.css
@@ -80,7 +80,7 @@ body {
     border-radius: 9px;
     border: none;
     cursor: pointer;
-    padding: 6px 7px;
+    padding: 5px 7px;
     font-weight: bold;
     text-transform: uppercase;
     background-color: #6AAB9A;
@@ -88,10 +88,15 @@ body {
     font-size: 1.1rem;
     transition: 0.1s linear;
 }
+.fas{
+    vertical-align: 1px;
+}
 
 .regenerate:active {
     background-color: rgb(61, 112, 98);
 }
+
+
 
 
 /* X버튼 */
@@ -103,20 +108,56 @@ body {
     border: none;
     cursor: pointer;
     /* width: 12px; */
-    padding: 4px 7px;
+    padding: 5px 8px;
     /* height: 10px; */
     font-weight: bold;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     text-transform: uppercase;
     background-color: #b6b6b6;
     color: #fff;
-    box-shadow: 0px 0px 3px #02010a6b;
+    /* box-shadow: 0px 0px 3px #02010a6b; */
     transition: 0.1s linear;
 }
 
-.disable_x:hover {
+.disable_x:active {
     background-color: #333;
 }
+
+
+/* X버튼 눌렀을 시 비활성화 효과들*/
+
+.disabled{
+    filter: opacity(0.4);
+}
+
+.group_wrap.disabled .group li{
+    filter: brightness(0);
+    opacity: .1;
+}
+/* fancy_popup_text */
+.group_wrap.disabled .regenerate:active{
+    background-color: #6AAB9A;
+}
+
+
+/* +버튼 */
+.disable_x .fas.fa-plus{
+    display: none;
+
+  /*   filter: opacity(1)!important;
+    background-color: #6AAB9A; */
+}
+.disabled .disable_x{
+    filter: opacity(1)!important;
+    background-color: #6AAB9A!important;
+}
+
+
+
+
+
+
+
 
 /* 게임번호 한 줄 */
 /* 게임번호 한 줄 */
@@ -167,7 +208,9 @@ body {
 .copy:active {
     background-color: #000;
 }
-
+.group_wrap.disabled .copy:active{
+    background-color: #888;
+}
 
 
 
@@ -451,24 +494,52 @@ footer {
 
 
 /* 팝업안에 이미지 넣을 시 */
-/* .content .medal img {
-    display: block;
-    margin: auto;
+.empty_num{
+    margin: 0 auto;
+    width: 100%;
     max-width: 180px;
-    filter: drop-shadow(0 0 4px rgba(251, 255, 0, 0.61));
-} */
-/* animation: animate 1s ease-in-out-in-out; */
+    /* height: 150px; */
+    border-radius: 10px;
+    overflow: hidden;
+    animation: animate .5s ease-in-out;
+}
+.empty_num img {
+   width: 100%;
+   height: 100%;
+    /* filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.61)); */
+}
 
-/* @keyframes animate {
+ @keyframes animate {
     0% {
-        transform: scale(0);
+        transform: scale(.5);
     }
 
-    50% {
-        transform: scale(1.05);
-    }
 
     100% {
         transform: scale(1);
     }
-} */
+} 
+
+
+
+/* 아무도 안쓰는.. 폴드용 사이즈수정 */
+
+
+
+/* Mo.ver */
+@media /* (min-width:296px) and  */(max-width:345px) {
+
+    .popup_modalBox {
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        transform: translate(-50%, 0%);
+        width: 83%;
+        border-radius: 10px 10px 10px 10px;
+        z-index: 3000;
+        text-align: left;
+        box-shadow: 0px 0px 3px 0px rgb(0 0 0 / 53%);
+        background-color: #fff;
+    }
+
+}
