--- a/css/reset.css
+++ b/css/reset.css
@@ -1,5 +1,16 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
+
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+
+/* 로보토 안쓰면 몇몇개 글자안보임 */
+* {
+     font-family: 'Pretendard';
+     /* font-weight: 700; */
+}
+
+/* 프리텐다드 폰트 굵기 */
+/*  100 ~ 900 */
+
 
 * {
      margin: 0;
@@ -10,12 +21,14 @@ html,
 body {
      font-size: 62.5%;
      line-height: 1;
-     font-family: 'Noto Sans KR', sans-serif;
+     font-family: 'Pretendard';
 }
+
+
 
 button {
      -webkit-tap-highlight-color: transparent;
-     font-family: 'Noto Sans KR', sans-serif;
+     font-family: 'Pretendard';
 }
 
 /* 이러면 1.6rem이라했을때 16px으로 편히 볼수있음*/
