--- a/css/common.css
+++ b/css/common.css
@@ -84,19 +84,30 @@
 .sheet_top_img {
      /* background-color: #0080ff; */
      width: 100%;
-     height: 100px;
+     height: 200px;
      position: relative;
 }
 
 /* gif별로 높이 bottom 조정 해야함 */
 .sheet_top_img img {
-     width: 133px;
+     width: 210px;
      position: absolute;
-     bottom: -10px;
+     bottom: 20px;
      left: 50%;
      transform: translate(-50%, 0);
 }
 
+
+.only_side_wrap {
+     width: calc(100% - 40px);
+     margin: 0 auto;
+     height: 100%;
+     /* display: flex; */
+ }
+ 
+ .main_btn_bg {
+     background-color: #FF3E7A !important;
+ }
 
 .sheet_top {
      margin-bottom: 30px;
@@ -112,7 +123,8 @@
      text-align: center;
      background-color: #fff;
      box-shadow: 0px 0px 10px rgb(0 0 0 / 20%);
-     padding: 20px 0 20px 0;
+     /* padding: 20px 0 20px 0; */
+     padding:40px 0;
 
 }
 
@@ -134,6 +146,13 @@
      font-size: inherit;
 }
 
+
+/* 
+footer_fir_close_btn
+
+footer_btn
+footer_sec_btn
+*/
 
 .sheet_sub_title {
      font-size: 1.2rem;
@@ -166,6 +185,8 @@
      text-align: left;
      margin-bottom: 20px;
 }
+
+
 
 
 
@@ -259,7 +280,7 @@
 
 .footer_btn_wrap {
      width: 100%;
-     padding-top: 15px;
+     padding-top: 45px;
 }
 
 /* 한줄 글 */
